--- a/fly.toml
+++ b/fly.toml
@@ -7,6 +7,7 @@ app = 'lacos-v2-dkrwiq'
 primary_region = 'gru'
 
 [build]
+dockerfile = "Dockerfile"
 
 [http_service]
   internal_port = 8080
@@ -17,7 +18,7 @@ primary_region = 'gru'
   processes = ['app']
 
 [[vm]]
-  memory = '1gb'
+  memory = '225mb'
   cpu_kind = 'shared'
   cpus = 1
-  memory_mb = 1024
+  memory_mb = 225
