--- a/fly.toml
+++ b/fly.toml
@@ -8,9 +8,14 @@ dockerfile = "Dockerfile"
 auto_start_machines = true
 auto_stop_machines = true
 force_https = true
-internal_port = 8_080
+internal_port = 8080
 min_machines_running = 0
-processes = [ "app" ]
+processes = ["app"]
 
 [[vm]]
 size = "shared-cpu-1x"
+
+[[services]]
+  internal_port = 5432
+  protocol = "tcp"
+  postgresql = true 
